Omaha part pretty complete
